--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,37 +26,59 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="16dp"
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <EditText
-            android:id="@+id/numberEt"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/numberIl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/card_number"
-            android:inputType="number"/>
+            app:errorEnabled="true">
 
-        <EditText
-            android:id="@+id/expDateEt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/exp_date"
-            android:inputType="date"/>
+            <EditText
+                android:id="@+id/numberEt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/card_number"
+                android:inputType="number"/>
+        </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:id="@+id/cvvEt"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/expDateIl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/cvv"
-            android:inputType="number"/>
+            app:errorEnabled="true">
+
+            <EditText
+                android:id="@+id/expDateEt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/exp_date"
+                android:inputType="date"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/cvvIl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
+
+            <EditText
+                android:id="@+id/cvvEt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/cvv"
+                android:inputType="number"/>
+        </android.support.design.widget.TextInputLayout>
 
         <Button
             android:id="@+id/showBalanceBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button"/>
+            android:text="@string/next"/>
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
