--- a/app/src/main/res/drawable/ic_add.xml
+++ b/app/src/main/res/drawable/ic_add.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2016. Manuel Rebollo Báez.
+  ~ Copyright (c) 2016. Manuel Rebollo Báez
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -14,14 +14,12 @@
   ~ limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.mrebollob.m2p.presentation.view.main.MainActivity">
-    <item
-        android:id="@+id/action_create"
-        android:icon="@drawable/ic_add"
-        android:orderInCategory="100"
-        android:title="@string/create"
-        app:showAsAction="ifRoom"/>
-</menu>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportHeight="24.0"
+        android:viewportWidth="24.0">
+    <path
+        android:fillColor="#FFF"
+        android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+</vector>
