--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2016. Manuel Rebollo Báez.
+  ~ Copyright (c) 2016. Manuel Rebollo Báez
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
