--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,8 +46,7 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/spacing_medium">
+            android:layout_height="match_parent">
 
             <com.victor.loading.rotate.RotateLoading
                 android:id="@+id/loadingView"
@@ -60,22 +59,45 @@
                 tools:visibility="visible"/>
 
             <FrameLayout
-                android:id="@+id/dataView"
+                android:id="@+id/mainView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/cardBalanceTv"
+                <android.support.v4.widget.SwipeRefreshLayout
+                    android:id="@+id/dataView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/primary_text"
-                    android:textSize="@dimen/text_size_medium"
-                    tools:text="Balance: 8,04 €"/>
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="@string/balance"
+                            android:textColor="@color/primary_text"
+                            android:textSize="@dimen/font_large"/>
+
+                        <TextView
+                            android:id="@+id/cardBalanceTv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:textColor="@color/primary_text"
+                            android:textSize="@dimen/font_larger"
+                            tools:text="8,04 €"/>
+                    </LinearLayout>
+                </android.support.v4.widget.SwipeRefreshLayout>
 
                 <LinearLayout
                     android:id="@+id/errorView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/spacing_normal"
                     android:gravity="center"
                     android:orientation="vertical"
                     android:visibility="gone"
@@ -86,21 +108,21 @@
                         android:layout_height="wrap_content"
                         android:text="@string/error"
                         android:textColor="@color/primary_text"
-                        android:textSize="@dimen/text_size_title"/>
+                        android:textSize="@dimen/font_normal"/>
 
                     <TextView
                         android:id="@+id/errorTv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/primary_text"
-                        android:textSize="@dimen/text_size_large"
+                        android:textSize="@dimen/font_large"
                         tools:text="Unknown error"/>
 
                     <Button
                         android:id="@+id/retryBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/spacing_medium"
+                        android:layout_marginTop="@dimen/spacing_normal"
                         android:text="@string/retry"/>
                 </LinearLayout>
             </FrameLayout>
@@ -114,5 +136,4 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_add"/>
-
 </android.support.design.widget.CoordinatorLayout>
