--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -37,12 +37,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <morxander.editcard.EditCard
+            <EditText
                 android:id="@+id/numberEt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/card_number"
                 android:inputType="number"
+                android:maxLength="19"
                 android:textColor="@color/primary_text"
                 android:textSize="@dimen/text_size_normal"/>
         </android.support.design.widget.TextInputLayout>
@@ -56,7 +57,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/exp_date"
-                android:inputType="date"
+                android:inputType="number"
+                android:maxLength="5"
                 android:textColor="@color/primary_text"
                 android:textSize="@dimen/text_size_normal"/>
         </android.support.design.widget.TextInputLayout>
