--- a/app/src/main/res/drawable/ic_credit_card.xml
+++ b/app/src/main/res/drawable/ic_credit_card.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2016. Manuel Rebollo Báez.
+  ~ Copyright (c) 2017. Manuel Rebollo Báez
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -15,17 +14,12 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <color name="primary">#03A9F4</color>
-    <color name="primary_dark">#0288D1</color>
-    <color name="primary_light">#B3E5FC</color>
-    <color name="accent_dark">#D32F2F</color>
-    <color name="accent">#FF5252</color>
-
-    <color name="primary_text">#212121</color>
-    <color name="primary_text_white">#FFF</color>
-    <color name="secondary_text">#757575</color>
-
-    <color name="icons">#FFFFFF</color>
-    <color name="divider">#BDBDBD</color>
-</resources>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="128dp"
+        android:height="128dp"
+        android:viewportHeight="24.0"
+        android:viewportWidth="24.0">
+    <path
+        android:fillColor="#FFF"
+        android:pathData="M20,4L4,4c-1.11,0 -1.99,0.89 -1.99,2L2,18c0,1.11 0.89,2 2,2h16c1.11,0 2,-0.89 2,-2L22,6c0,-1.11 -0.89,-2 -2,-2zM20,18L4,18v-6h16v6zM20,8L4,8L4,6h16v2z"/>
+</vector>
