--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -15,39 +15,74 @@
   ~  limitations under the License.
   -->
 
-<FrameLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_lock"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/accent"
+    android:fitsSystemWindows="true"
     tools:context="com.mrebollob.m2p.presentation.view.lock.LockActivity">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:background="@color/accent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <com.andrognito.pinlockview.IndicatorDots
-            android:id="@+id/indicatorDots"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:dotDiameter="@dimen/spacing_normal"
-            app:dotEmptyBackground="@drawable/dot_empty"
-            app:dotFilledBackground="@drawable/dot_filled"
-            app:dotSpacing="@dimen/spacing_normal"
-            app:pinLength="3"/>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/spacing_huge"
+            android:src="@drawable/ic_credit_card"/>
 
-        <com.andrognito.pinlockview.PinLockView
-            android:id="@+id/pinLockView"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/spacing_normal"
-            app:keypadTextSize="@dimen/font_larger"
-            app:pinLength="3"/>
-    </LinearLayout>
-</FrameLayout>
+            android:layout_gravity="bottom"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/spacing_huge"
+                android:layout_marginEnd="@dimen/spacing_normal"
+                android:layout_marginLeft="@dimen/spacing_normal"
+                android:layout_marginRight="@dimen/spacing_normal"
+                android:layout_marginStart="@dimen/spacing_normal"
+                android:text="@string/lock_view_info_text"
+                android:textColor="@color/primary_text_white"
+                android:textSize="@dimen/font_large"/>
+
+            <com.andrognito.pinlockview.IndicatorDots
+                android:id="@+id/indicatorDots"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:dotDiameter="@dimen/spacing_normal"
+                app:dotEmptyBackground="@drawable/dot_empty"
+                app:dotFilledBackground="@drawable/dot_filled"
+                app:dotSpacing="@dimen/spacing_normal"
+                app:pinLength="3"/>
+
+            <com.andrognito.pinlockview.PinLockView
+                android:id="@+id/pinLockView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/spacing_normal"
+                app:keypadTextSize="@dimen/font_larger"
+                app:pinLength="3"/>
+
+            <Button
+                android:id="@+id/removeCardButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacing_normal"
+                android:text="@string/remove_credit_card"
+                android:textColor="@color/primary_text_white"
+                android:textSize="@dimen/font_large"/>
+        </LinearLayout>
+    </FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
