--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,6 +90,12 @@
                             android:textColor="@color/primary_text"
                             android:textSize="@dimen/font_larger"
                             tools:text="8,04 €"/>
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/movementList"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            tools:listitem="@layout/movement_item_view"/>
                     </LinearLayout>
                 </android.support.v4.widget.SwipeRefreshLayout>
 
