--- a/app/src/main/res/menu/menu_done.xml
+++ b/app/src/main/res/menu/menu_done.xml
@@ -16,13 +16,10 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.mrebollob.m2p.presentation.view.main.MainActivity">
+      xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_done"
         android:icon="@drawable/ic_done"
-        android:orderInCategory="100"
         android:title="@string/edit_card"
         app:showAsAction="always"/>
 </menu>
