--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,4 +35,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+    <style name="AppTheme.CenterAnimation">
+        <item name="android:windowBackground">@mipmap/ic_launcher</item>
+    </style>
+
 </resources>
