--- a/app/src/main/res/layout/activity_balance.xml
+++ b/app/src/main/res/layout/activity_balance.xml
@@ -23,7 +23,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.mrebollob.m2p.presentation.view.main.MainActivity">
+    tools:context="com.mrebollob.m2p.presentation.view.balance.BalanceActivity">
 
     <include layout="@layout/toolbar"/>
 
@@ -137,13 +137,4 @@
             </FrameLayout>
         </FrameLayout>
     </LinearLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add"
-        app:layout_anchor="@id/cardContainer"
-        app:layout_anchorGravity="bottom|end"/>
 </android.support.design.widget.CoordinatorLayout>
