Added sugar orm

--- a/app/src/main/res/layout/item_movement.xml
+++ b/app/src/main/res/layout/item_movement.xml
@@ -18,6 +18,8 @@
 
     <data>
 
+        <import type="android.view.View"/>
+
         <variable
             name="movement"
             type="com.mrebollob.m2p.domain.entities.CreditCardMovement"/>
@@ -67,6 +69,7 @@
             android:maxLines="2"
             android:text="@{@string/money_format(movement.amount)}"
             android:textSize="@dimen/font_normal"
+            android:visibility="@{movement.amount < 0 ? View.VISIBLE : View.GONE}"
             tools:text="8,30 €"/>
     </LinearLayout>
 </layout>
